--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "bootstrap": "^4.5.3",
+    "browser-image-compression": "^1.0.14",
     "docxtemplater": "^3.19.9",
     "firebase": "^8.1.1",
     "pizzip": "^3.0.6",
