--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "Application backend",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node express.js"
+    "start": "node express.js",
+    "prod": "node express.js prod"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
