--- a/client/.env.production
+++ b/client/.env.production
@@ -5,7 +5,8 @@ REACT_APP_FIREBASE_PROJECT_ID = "crm-dev-e9cba"
 REACT_APP_FIREBASE_STORAGE_BUCKET = "crm-dev-e9cba.appspot.com"
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID = "782488920032"
 REACT_APP_FIREBASE_API_ID = "1:782488920032:web:3de4df1a58ead8497b9585"
-HOST_PROD=clinic.com
+HOST_PROD=18.197.198.86
 PORT=3000
-REACT_APP_BASE_API_URL="http://$HOST_PROD:$PORT/api/"
-REACT_APP_BASE_URL="http://$HOST_PROD:$PORT/"
+SERVER_PORT=3001
+REACT_APP_BASE_API_URL="http://$HOST_PROD:$SERVER_PORT/api/"
+REACT_APP_BASE_URL="http://$HOST_PROD:$SERVER_PORT/"
