--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node express.js",
-    "prod": "node express.js prod"
+    "prod": "pm2 start express.js prod"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -19,7 +19,8 @@
     "lodash": "^4.17.20",
     "lodash.groupby": "^4.6.0",
     "mongodb": "^3.6.3",
-    "pizzip": "^3.0.6"
+    "pizzip": "^3.0.6",
+    "pm2": "^4.5.5"
   },
   "devDependencies": {},
   "author": "Erez E",
