--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node express.js",
-    "prod": "pm2 start express.js prod"
+    "prod": "pm2 start express.js --prod"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
