bug fixes and config changes

--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "Application backend",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node express.js",
-    "prod": "pm2 start express.js -- prod"
+    "start": "node express.js dev 3001",
+    "prod": "pm2 start express.js -- prod 80"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
