--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "cd client && npm run build && cd .. && cp client/build server -r -i && pm2 stop express.js && cd server && npm run prod"
+    "install": "cd client && npm run build && cd .. && cp client/build server -r && cd server && pm2 stop express.js && npm run prod"
   },
   "repository": {
     "type": "git",
